<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_bg">

    <FrameLayout
        android:id="@+id/framentPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout="@layout/fragment_main"
        tools:layout="@layout/fragment_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:drawableTop="@drawable/ic_minimalista_home"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/inicio"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:theme="@style/AppTheme.Ripple"
            tools:ignore="KeyboardInaccessibleWidget,SmallSp" />

        <TextView
            android:id="@+id/buscasTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:drawableTop="@drawable/ic_minimalista_busca"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/buscas"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:theme="@style/AppTheme.Ripple"
            tools:ignore="KeyboardInaccessibleWidget,SmallSp" />

        <TextView
            android:id="@+id/emBreveTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:drawableTop="@drawable/ic_minimalista_em_breve"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/em_breve"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:theme="@style/AppTheme.Ripple"
            tools:ignore="KeyboardInaccessibleWidget,SmallSp" />

        <TextView
            android:id="@+id/downloadsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:drawableTop="@drawable/ic_minimalista_download"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/downloads"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:theme="@style/AppTheme.Ripple"
            tools:ignore="KeyboardInaccessibleWidget,SmallSp" />

        <TextView
            android:id="@+id/minhListaTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:clickable="true"
            android:drawableTop="@drawable/ic_minimalista_mais"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/mais"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:theme="@style/AppTheme.Ripple"
            tools:ignore="KeyboardInaccessibleWidget,SmallSp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>