<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_bg"
    tools:context=".fragment.SearchFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layoutLoad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        tools:visibility="gone">

        <ProgressBar
            style="@style/ProgressBarCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fitsSystemWindows="true"
            android:theme="@style/ProgressBarCustom" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layoutPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:padding="@dimen/activity_horizontal_margin">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/altura_item_lista"
            android:gravity="top"
            android:text="@string/entrar"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apiKeyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_login_normal"
                android:hint="@string/digite_sua_chave_de_api"
                android:minHeight="@dimen/altura_item_lista"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:textColorHint="@color/cinza_4"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                tools:ignore="RtlSymmetry">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/apiKeyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorOverlay0"
                    android:maxLines="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/keyInvalidaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digite_uma_api_key_valida"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textColor="@color/laranja_3"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/urlCanalTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_edittext_login_normal"
                android:hint="@string/url_do_canal"
                android:minHeight="@dimen/altura_item_lista"
                android:paddingStart="24dp"
                android:paddingTop="8dp"
                android:paddingEnd="24dp"
                android:paddingBottom="8dp"
                android:textColorHint="@color/cinza_4"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                tools:ignore="RtlSymmetry">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/urlCanalEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorOverlay0"
                    android:maxLines="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/urlInvalidoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digite_uma_url_valida"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textColor="@color/laranja_3"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                style="@style/BotaoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:minHeight="@dimen/altura_item_lista"
                android:text="@string/entrar"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/BotaoLogin"
                app:cornerRadius="5dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="8dp"
                android:text="@string/precisa_de_ajuda"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/cinza_3"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>